# CalendarApp

./: LICENSE  README.md
backend/: .env  manage.py  pyproject.toml
backend/backend_root/: asgi.py  settings.py  urls.py  wsgi.py
backend/calendar_app/: models.py  serializers.py  urls.py  views.py
backend/calendar_app/migrations/: 0001_initial.py  0002_alter_event_ending_time_alter_event_starting_time.py
frontend/calendar-app/: package-lock.json
frontend/src/: App.jsx
